--- a/index.html
+++ b/index.html
@@ -1,30 +1,11 @@
-
 <!doctype html>
 <html lang="pl">
 <head>
- <title>Styl wewnętrzny osadzony</title>
- <style>
- body {
- background: rgb(150,151,25);
- margin: 50px;
- }
- div {
- text-align: center;
- }
- span {
- color: #f00;
- }
- </style>
+<meta charset="utf-8">
  </head>
 <body>
- <div>
- <p>Zmiana stylu w znaczniku span <span> wyróżniony fragmencik
- </span> tak dla próby. </p>
- <h1>A to div</h1>
- <h2>z nagłówkami i obrazkiem</h2>
- <img src="obrazek.jpg">
- <h3>wyśrodkowany cały blok</h3>
- </div>
+ <h1> Strony  z lekcji</h1>
+<a href=szablony/szablon1.html>Szablon 1</a>
 </body>
 </html>
 
