--- a/index.html
+++ b/index.html
@@ -1,104 +1,66 @@
-<!DOCTYPE html>
+body {
+     background-color: white;
+     font-family: Verdana, Arial, Helvetica, sans-serif;
+     font-size: small;
+     margin: 1%; /* Converted to percentage */
+     padding: 0;
+}
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		
+#container {
+     width: 90%; /* Converted to percentage */
+     background-color: #ffffcc;
+     margin-left: auto;
+     margin-right: auto;
+     border: 1px solid black;
+}
 
-		<link rel="stylesheet" href="./cekajadaso.netlify.app_files/style.css">
-</head>
-<body class="body">
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-										<!--POCZĄTEK header -->
-		<div class="logo">
-			<img src="./cekajadaso.netlify.app_files/logo.png" style="weight: 200px; height: 140px; display: block; padding-left: 45px;">
-		</div>
-		<style>
-			.logo {
-				float: left;
-			}
-		</style>
+header {
+     height: 10%; /* Adjusted to percentage */
+     background-color: silver;
+     border-bottom: 1px solid black;
+}
 
-		<div class="header">
-			<p>&nbsp;</p>	
-			<div><h1>】Strona główna【</h1></div>		
-		</div>
-										<!--KONIEC header -->
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-										<!--POCZĄTEK menu -->
-			<div class="menu">
-				<div class="format-menu-aside"><a href="https://cekajadaso.netlify.app/pdf/">☛PDF'y</a></div>
-				<p></p>
-				<div class="format-menu-aside"><a href="https://cekajadaso.netlify.app/wzory/">☛Wzory</a></div>
-				<div style="clear:both;"></div>
-			</div>
-										<!--KONIEC menu -->
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-										<!--POCZĄTEK content -->
-		<div class="content">
-			<!--<div class="content-links">
-				<a href="zadania/index.html">☛Zadania z lekcji</a>-->
-			<!--</div>-->
-			<div class="nad-dropdown">
-				<div class="dropdown"> 
-					<button style="padding: 20px; font-size: 30px; color: black; font-family: Verdana; font-weight: bold;">Zadania z lekcji</button>
-					<div class="kontent">
-						
-					</div>
-				</div>
-			</div>
-		
-			<style>
-				.nad-dropdown {
-					padding-top: 150px;
-					padding-left: 45%;
-				}
-				.dropdown {
-					display: inline-block;
-				}
-				.dropdown button{
-					background-color: hsl(115, 58%, 47%);
-					color: rgb(10, 112, 18);
-					padding: 10px, 15px;
-					border: none;
-					cursor: pointer;
-				}
-				.dropdown a{
-					display: block;
-					color: black;
-					text-decoration: none;
-					padding: 10px, 15px;
-				}
-				.dropdown .kontent{
-					display: none;
-					position: absolute;
-					background-color: rgb(17, 143, 84);
-					min-width: 100px;
-					box-shadow: 2px 2px 5px hsl(0, 0%, 0.8);
-				}
-				.dropdown:hover .kontent{
-					display: block;
-				}
-				.dropdown:hover button{
-					background-color: hsl(115, 58%, 47%);
-				}
-				.dropdown a:hover{
-					background-color: rgb(14, 185, 86);
-				}
-			</style>
-		</div>
-										<!--KONIEC content -->
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-										<!--POCZĄTEK aside -->
-		"
-			
-										<!--KONIEC aside -->
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-										<!--POCZĄTE footer-->
-		<div class="footer">
-			<p class="footer1">Created by: jacek osada&nbsp;&nbsp;&nbsp;&nbsp;2024</p>
-			<p class="footer1">jack osada 2cT-2</p>
-		</div>
-										<!--KONIEC footer-->
-<!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-	
+header h1 {
+     text-align: center;
+     font-size: 200%;
+}
 
-</body></html>
+nav {
+     width: 15%; /* Converted to percentage */
+     background-color: silver;
+     padding: 1%; /* Converted to percentage */
+     margin: 1%; /* Converted to percentage */
+     float: left;
+     border: 1px solid black;
+}
+
+article {
+     width: 60%; /* Adjusted to percentage */
+     margin: 1%; /* Converted to percentage */
+     padding: 1%; /* Converted to percentage */
+     float: left;
+     border: 1px solid black;
+}
+
+aside {
+     width: 20%; /* Converted to percentage */
+     background-color: silver;
+     padding: 1%; /* Converted to percentage */
+     margin: 1%; /* Converted to percentage */
+     float: left;
+     border: 1px solid black;
+}
+
+footer {
+     height: 5%; /* Adjusted to percentage */
+     background-color: silver;
+     clear: both;
+     border-top: 1px solid black;
+}
+
+footer p {
+     text-align: center;
+     padding: 1%; /* Converted to percentage */
+     margin: 0;
+     clear: both;
+}
