--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@ body {
      background-color: white;
      font-family: Verdana, Arial, Helvetica, sans-serif;
      font-size: small;
-     margin: 1%; /* Converted to percentage */
+     margin: 1%; 
      padding: 0;
 }
 
 #container {
-     width: 90%; /* Converted to percentage */
+     width: 90%; 
      background-color: #ffffcc;
      margin-left: auto;
      margin-right: auto;
@@ -15,7 +15,7 @@ body {
 }
 
 header {
-     height: 10%; /* Adjusted to percentage */
+     height: 10%; 
      background-color: silver;
      border-bottom: 1px solid black;
 }
@@ -26,33 +26,30 @@ header h1 {
 }
 
 nav {
-     width: 15%; /* Converted to percentage */
+     width: 15%; 
      background-color: silver;
-     padding: 1%; /* Converted to percentage */
-     margin: 1%; /* Converted to percentage */
+     padding: 1%; 
+     margin: 1%; 
      float: left;
      border: 1px solid black;
 }
 
 article {
-     width: 60%; /* Adjusted to percentage */
-     margin: 1%; /* Converted to percentage */
-     padding: 1%; /* Converted to percentage */
+     width: 60%; 
      float: left;
      border: 1px solid black;
 }
 
 aside {
-     width: 20%; /* Converted to percentage */
+     width: 20%; 
      background-color: silver;
-     padding: 1%; /* Converted to percentage */
-     margin: 1%; /* Converted to percentage */
+     padding: 1%; 
      float: left;
      border: 1px solid black;
 }
 
 footer {
-     height: 5%; /* Adjusted to percentage */
+     height: 5%; 
      background-color: silver;
      clear: both;
      border-top: 1px solid black;
@@ -60,7 +57,7 @@ footer {
 
 footer p {
      text-align: center;
-     padding: 1%; /* Converted to percentage */
+     padding: 1%; 
      margin: 0;
      clear: both;
 }
