--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body style="background-color: blue;">
     <div class="container">
         <div class="content">
-            <a href='/galeria/galeria'>galeria</a>
-            <a href='/urbanek/urbanek'>urbanek</a>
-            <a href='/atrakcje/atrakcje'>atrakcje</a>
-            <a href='/odpoczynek/relaks'>Relaks</a>
+            <a href='/galeria/index.html'>galeria</a>
+            <a href='/urbanek/index.html'>urbanek</a>
+            <a href='/atrakcje/index.html'>atrakcje</a>
+            <a href='/odpoczynek/index.html'>Relaks</a>
         </div>
     </div>
 </body>
