--- a/galeria/index.html
+++ b/galeria/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="gallery">
         <div class="thumbnails">
-            <img src="1.jpg" alt="Zdjęcie 1" onclick="openModal('1.jpg')">
-            <img src="2.jpg" alt="Zdjęcie 2" onclick="openModal('2.jpg')">
-            <img src="3.jpg" alt="Zdjęcie 3" onclick="openModal('3.jpg')">
-            <img src="4.jpg" alt="Zdjęcie 4" onclick="openModal('4.jpg')">
+            <img src="1.png" alt="Zdjęcie 1" onclick="openModal('1.jpg')">
+            <img src="2.png" alt="Zdjęcie 2" onclick="openModal('2.jpg')">
+            <img src="3.png" alt="Zdjęcie 3" onclick="openModal('3.jpg')">
+            <img src="4.png" alt="Zdjęcie 4" onclick="openModal('4.jpg')">
         </div>
         <div id="modal" class="modal">
             <span class="close" onclick="closeModal()">&times;</span>
