--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href='/historia/index.html'>urbanek</a>
             <a href='/atrakcje/index.html'>atrakcje</a>
             <a href='/odpoczynek/index.html'>Relaks</a>
-            <a href='/linki/index.html'>Relaks</a>
+            <a href='/linki/index.html'>Źródła</a>
         </div>
     </div>
 </body>
