--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="content">
             <a href='/galeria/index.html'>galeria</a>
-            <a href='/historia/index.html'>urbanek</a>
+            <a href='/historia/index.html'>historia</a>
             <a href='/atrakcje/index.html'>atrakcje</a>
             <a href='/odpoczynek/index.html'>Relaks</a>
             <a href='/linki/index.html'>Źródła</a>
