--- a/historia/index.html
+++ b/historia/index.html
@@ -13,13 +13,13 @@
     
     <div class="attraction">
       <h2>1. Pałac w Tworkowie, ul. Parkowa</h2>
-      <p>Górki Śląskie to niewielka miejscowość położona na Górnym Śląsku, w województwie śląskim. Jej historia sięga średniowiecza, kiedy to region ten był częścią Księstwa Raciborskiego. Pierwsze wzmianki o Górkach Śląskich pojawiają się w dokumentach z XIV wieku, kiedy to wieś była własnością szlachecką.
+      <p>Górki Śląskie to niewielka miejscowość położona na Górnym Śląsku, w województwie śląskim. Jej historia sięga średniowiecza, kiedy to region ten był częścią Księstwa Raciborskiego. Pierwsze wzmianki o Górkach Śląskich pojawiają się w dokumentach z XIV wieku, kiedy to wieś była własnością szlachecką. </p>
 
-W XVI wieku Górki Śląskie były częścią dóbr rodu von Trach, który był jednym z najznamienitszych rodów szlacheckich na Śląsku. Wówczas w miejscowości powstał dwór, który stał się centrum życia gospodarczego i społecznego. W XVIII wieku, w wyniku wojen śląskich, Górki Śląskie znalazły się pod panowaniem Prus.
+<p> W XVI wieku Górki Śląskie były częścią dóbr rodu von Trach, który był jednym z najznamienitszych rodów szlacheckich na Śląsku. Wówczas w miejscowości powstał dwór, który stał się centrum życia gospodarczego i społecznego. W XVIII wieku, w wyniku wojen śląskich, Górki Śląskie znalazły się pod panowaniem Prus. </p>
 
-W XIX wieku, podobnie jak wiele innych miejscowości na Śląsku, Górki Śląskie doświadczyły procesów industrializacji. Powstały wtedy niewielkie zakłady przemysłowe oraz kopalnie węgla kamiennego, które przyczyniły się do rozwoju gospodarczego regionu. W tym czasie wieś znacznie się rozrosła, a liczba mieszkańców wzrosła.
+<p> W XIX wieku, podobnie jak wiele innych miejscowości na Śląsku, Górki Śląskie doświadczyły procesów industrializacji. Powstały wtedy niewielkie zakłady przemysłowe oraz kopalnie węgla kamiennego, które przyczyniły się do rozwoju gospodarczego regionu. W tym czasie wieś znacznie się rozrosła, a liczba mieszkańców wzrosła. </p>
 
-Po II wojnie światowej Górki Śląskie, podobnie jak cały region, stały się częścią Polski. W okresie PRL-u miejscowość przeszła kolejną fazę industrializacji, jednak zachowała swój charakter wiejski. Współcześnie Górki Śląskie to spokojna miejscowość, która łączy w sobie bogatą historię z nowoczesnością, będąc miejscem zamieszkania dla wielu osób pracujących w pobliskich miastach.</p>
+<p> Po II wojnie światowej Górki Śląskie, podobnie jak cały region, stały się częścią Polski. W okresie PRL-u miejscowość przeszła kolejną fazę industrializacji, jednak zachowała swój charakter wiejski. Współcześnie Górki Śląskie to spokojna miejscowość, która łączy w sobie bogatą historię z nowoczesnością, będąc miejscem zamieszkania dla wielu osób pracujących w pobliskich miastach.</p>
     </div>
   </div>
 </body>
