--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>Budowa komputera</title>
+    <title>Górki Śląskie</title>
     <meta name="description" content="Strona na zaliczenie">
     <meta name="keywords" content="Strona na zaliczenie">
     <meta name="author" content="Jacek Osada">
