--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <a href='/galeria/index.html'>galeria</a>
             <a href='/historia/index.html'>historia</a>
-            <a href='/atrakcje/index.html'>atrakcje</a>
+            <a href='/parafia/index.html'>parafia</a>
             <a href='/linki/index.html'>Źródła</a>
         </div>
     </div>
