--- a/linki/index.html
+++ b/linki/index.html
@@ -5,7 +5,7 @@
     <title>Budowa komputera</title>
     <meta name="description" content="Strona zaliczeniowa">
     <meta name="keywords" content="Strona na zaliczenie">
-    <meta name="author" content="Jacek Osada">
+    <meta name="author" content="Paweł Suchecki">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
