--- a/parafia/index.html
+++ b/parafia/index.html
@@ -9,14 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-Pierwsze starania o budowę kościoła miały miejsce w latach 20. XX wieku, gdy mieszkańcy wsi zostali przyłączeni do parafii Matki Boskiej Różańcowej w Nędzy. Ostatecznie nie wzniesiono nowej świątyni, jednak rozbudowano tę w Nędzy.
+<h2> Parafia w Górkach Śląskich </h2>
+<p> Pierwsze starania o budowę kościoła miały miejsce w latach 20. XX wieku, gdy mieszkańcy wsi zostali przyłączeni do parafii Matki Boskiej Różańcowej w Nędzy. Ostatecznie nie wzniesiono nowej świątyni, jednak rozbudowano tę w Nędzy. </p>
 
-W latach 50. XX wieku ponownie podjęto próbę utworzenia kościoła, co również się nie powiodło.
+<p>W latach 50. XX wieku ponownie podjęto próbę utworzenia kościoła, co również się nie powiodło.</p>
 
-W 1978 roku wojewoda katowicki wyraził zgodę na budowę kościoła, rok później biskup Antoni Adamiuk poświęcił plac pod świątynię. 5 listopada 1979 roku naczelnik Gminy Nędza wydał pozwolenie na budowę, po tygodniu ruszyły prace budowlane. 16 listopada 1979 roku biskup Alfons Nossol poświęcił kamień węgielny.
+<p> W 1978 roku wojewoda katowicki wyraził zgodę na budowę kościoła, rok później biskup Antoni Adamiuk poświęcił plac pod świątynię. 5 listopada 1979 roku naczelnik Gminy Nędza wydał pozwolenie na budowę, po tygodniu ruszyły prace budowlane. 16 listopada 1979 roku biskup Alfons Nossol poświęcił kamień węgielny. </p>
 
-4 września 1983 roku biskup Jan Wieczorek konsekrował świątynię.
+<p> 4 września 1983 roku biskup Jan Wieczorek konsekrował świątynię. </p>
 
-W 1984 roku w Górkach Śląskich erygowano samodzielną parafię.
+<p> W 1984 roku w Górkach Śląskich erygowano samodzielną parafię. </p>
 </body>
 </html>
