--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Górki Śląskie</title>
     <meta name="description" content="Strona na zaliczenie">
     <meta name="keywords" content="Strona na zaliczenie">
-    <meta name="author" content="Paweł Suchecki">
+    <meta name="author" content="Jacek Osada">
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="background-color: blue;">
