--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href='/historia/index.html'>historia</a>
             <a href='/parafia/index.html'>parafia</a>
             <a href='/linki/index.html'>Źródła</a>
-            <a href='/budowa/index.html'>Źródła</a>
+            <a href='/budowa/index.html'>Budowa Komputera</a>
         </div>
     </div>
 </body>
