--- a/linki/index.html
+++ b/linki/index.html
@@ -7,17 +7,15 @@
     <meta name="keywords" content="Strona na zaliczenie">
     <meta name="author" content="Jacek Osada">
     <link rel="stylesheet" href="style.css">
-</head>
+	</head>
 <body>
-    <div class="container">
-        <h1>Źródła</h1>
-        <ol>
-            <li><h2>https://pl.wikipedia.org/wiki/G%C3%B3rki_%C5%9Al%C4%85skie_(przystanek_kolejowy</h2></li>
-            <li><h2>https://pl.wikipedia.org/wiki/Parafia_Dobrego_Pasterza_w_G%C3%B3rkach_%C5%9Al%C4%85skich</h2></li>
-            <li><h2>https://www.naszraciborz.pl/</h2></li>
-            <li><h2>https://www.dobrypasterz.com.pl/</h2></li>
-            Autor: Jacek Osada strona zaliczeniowa
-        </ol>
-    </div>
+<hr>
+WSZYSTKIE ŹRODŁA
+<ul>
+<li>
+<li>
+<li>
+<li>
+</ul>
 </body>
 </html>
