--- a/linki/index.html
+++ b/linki/index.html
@@ -12,10 +12,9 @@
 <hr>
 WSZYSTKIE ŹRODŁA
 <ul>
-<li>
-<li>
-<li>
-<li>
+<li><li><a href="https://pl.wikipedia.org/wiki/Parafia_Dobrego_Pasterza_w_G%C3%B3rkach_%C5%9Al%C4%85skich" target="_blank">Wikipedia Parafia w Górkach Śląskich</a></li>
+<li><li><a href="https://pl.wikipedia.org/wiki/N%C4%99dza_(wojew%C3%B3dztwo_%C5%9Bl%C4%85skie)" target="_blank">Wikipedia Górki Śląskie</a></li>
+<li><li><a href="https://www.youtube.com/results?search_query=G%C3%B3rki+%C5%9Al%C4%85skie" target="_blank">Youtube Górki Śląskie</a></li>
 </ul>
 </body>
 </html>
