--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Jacek Osada">
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: blue;">
+<body style="background-image: url('baner.png');">
     <div class="container">
         <div class="content">
             <a href='/galeria/index.html'>galeria</a>
